--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -7,7 +7,11 @@
   </head>
   <body>
     <form  action="/new" method="post">
-      
+      <input type="text" name="name">
+      <input type="text" name="breed">
+      <input type="text" name="age">
+      <input type="submit" name="Submit" value="submit">
+
     </form>
 
   </body>
