automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,6 +6,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Click here to list a puppy</h1>
     <form  action="/new" method="post">
       <input type="text" name=":name">
       <input type="text" name=":breed">
