automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,6 +6,7 @@
     <title></title>
   </head>
   <body>
+    <h1>Puppy Adoption</h1>
     <a href="/welcome">"Click Here To List A Puppy"</a>
     <form  action="/new" method="post">
       <input type="text" name=":name">
