automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,9 +9,9 @@
     <h1>Puppy Adoption</h1>
     <a href="/welcome">"Click Here To List A Puppy"</a>
     <form  action="/new" method="post">
-      <input type="text" name=":name">
-      <input type="text" name=":breed">
-      <input type="text" name=":age">
+      <p>Puppy's Name: <input type="text" name="name"></p>
+      <p>Puppy's Breed: <input type="text" name="breed"></p>
+      <p>Pupp's Age: <input type="text" name="age"></p>
       <input type="submit" name="Submit" value="submit">
 
     </form>
