automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -12,6 +12,7 @@
       <p>Puppy's Name: <input type="text" name="name"></p>
       <p>Puppy's Breed: <input type="text" name="breed"></p>
       <p>Pupp's Age: <input type="text" name="age"></p>
+      <textarea name="user_text"></textarea>
       <input type="submit" name="Submit" value="submit">
 
     </form>
