--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,7 +8,7 @@
   <body>
     <h1>Puppy Adoption</h1>
     <a href="/welcome">"Click Here To List A Puppy"</a>
-    <form  action="/new" method="post">
+    <form  action="/" method="post">
       <p>Puppy's Name: <input type="text" name="name"></p>
       <p>Puppy's Breed: <input type="text" name="breed"></p>
       <p>Pupp's Age: <input type="text" name="age"></p>
