--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Puppy Adoption</h1>
-    <a href="/welcome">"Click Here To List A Puppy"</a>
+    <a href="/new">"Click Here To List A Puppy"</a>
     <form  action="/" method="POST">
       <p>Puppy's Name: <input type="text" name="name"></p>
       <p>Puppy's Breed: <input type="text" name="breed"></p>
