--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,3 +1,12 @@
-<h1>Puppy's Name: <%= @name %></h1>
-<h1>Puppy's Breed: <%= @breed %></h1>
-<h1>Puppy's Age: <%= @age %></h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Puppies</title>
+  </head>
+  <body>
+    <h2>Puppy Name: <%= @puppy.name %></h2>
+    <h2>Puppy Breed: <%= @puppy.breed %></h2>
+    <h2>Puppy Age: <%= @puppy.age %></h2>
+  </body>
+</html>
